--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=34.101.206.162
 DB_PORT=3306
-DB_DATABASE=injaz_db_uat
+DB_DATABASE=uat_injaz
 DB_USERNAME=root
 DB_PASSWORD=password@susah321
 
